--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-<link rel="stylesheet" href="style.css"/>
-<nav>
+<head>
+    <link rel="stylesheet" href="style.css"/>
+</head>
+    <nav>
     <ul id="navbar">
         <li><a href="#welcome-section">About</a></li>
         <li><a href="#projects">Work</a></li>
