--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <p>Let's make a plan and get to work!</p>
         </div>
         <a href="https://www.linkedin.com/in/jorgecoria-admin" target="_blank" class="contact-details">LinkedIn</a>
-        <a id="profile-link" href="https://jorge-coria.github.io" target="_blank" class="contact-details">Github</a>
+        <a id="profile-link" href="https://github.com/jorge-coria" target="_blank" class="contact-details">Github</a>
         <a href="mailto:jorgecoria094@gmail.com" class="contact-details">Send e-mail</a>
         <a href="tel:323-489-4535" class="contact-details">Call me</a>
     </div>
