--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h1>Want to bring your design to life?</h1>
             <p>Let's make a plan and get to work!</p>
         </div>
-        <a href="https://www.linkedin.com/in/jorgecoria-admin" target="_blank" class="contact-details">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/jorgeacoria/" target="_blank" class="contact-details">LinkedIn</a>
         <a id="profile-link" href="https://github.com/jorge-coria" target="_blank" class="contact-details">Github</a>
         <a href="mailto:jorgecoria094@gmail.com" class="contact-details">Send e-mail</a>
         <a href="tel:323-489-4535" class="contact-details">Call me</a>
