--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="projects" class="work">
         <h2 class="work-header">Check out my work:</h2>
         <a href="https://codepen.io/igloo-codes/full/rPPdjY" target="_blank" class="project project-tile">
-                <img class="project-pic" src="https://i.ibb.co/3N12Dfz/tribute-page-ok.png" alt="project">
+                <img class="project-pic" src="eddie bravo tribute_crop.png" alt="project">
                 <div class="project-title">Tribute Page</div>
             </a>
 
