--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
                 <div class="project-title">Tribute Page</div>
             </a>
 
-        <a href="https://codepen.io/igloo-codes/full/aXgdRj" target="_blank" class="project project-tile">
-                <img class="project-pic" src="https://i.ibb.co/272BL33/survey-form.png" alt="project">
+        <a href="Survey form - bjj sponsorship_crop.png" target="_blank" class="project project-tile">
+                <img class="project-pic" src="Survey form - bjj sponsorship_crop.png" alt="project">
                 <div class="project-title">Survey Form</div>
             </a>
 
-        <a href="https://codepen.io/igloo-codes/full/rgJaYN" target="_blank" class="project project-tile">
-                <img class="project-pic" src="https://i.ibb.co/vX4Dr2f/landing-page.png" alt="project">
+        <a href="product landing page - ccakes_crop.png" target="_blank" class="project project-tile">
+                <img class="project-pic" src="product landing page - ccakes_crop.png" alt="project">
                 <div class="project-title">Product Landing Page</div>
             </a>
 
-        <a href="https://codepen.io/igloo-codes/full/KLGqgG" target="_blank" class="project project-tile">
-                <img class="project-pic" src="https://i.ibb.co/dJdgyxZ/tech-documentation.png" alt="project">
+        <a href="tech documentation screenshot_crop.png" target="_blank" class="project project-tile">
+                <img class="project-pic" src="tech documentation screenshot_crop.png" alt="project">
                 <div class="project-title">Technical Documentation Page</div>
             </a>
 
