--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="project-title">Technical Documentation Page</div>
             </a>
 
-        <a href="https://codepen.io/igloo-codes/" class="show-all" target="_blank">Show all</a>
+        <a href="tel:323-489-4535" class="contact-details">Call me</a>
     </div>
     <div id="contact" class="contact">
         <div class="header">
@@ -51,7 +51,7 @@
         <a href="https://www.linkedin.com/in/jorgeacoria/" target="_blank" class="contact-details">LinkedIn</a>
         <a id="profile-link" href="https://github.com/jorge-coria" target="_blank" class="contact-details">Github</a>
         <a href="mailto:jorgecoria094@gmail.com" class="contact-details">Send e-mail</a>
-        <a href="tel:323-489-4535" class="contact-details">Call me</a>
+        <a href="tel:323-489-4535" class="contact-details">Text me</a>
     </div>
     <footer>Coria Web Solutions, 2019
     </footer>
