--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="project-title">Technical Documentation Page</div>
             </a>
 
-        <a href="tel:323-489-4535" class="contact-details">Call me</a>
+        <a href="tel:323-489-4535" class="show-all">Call me</a>
     </div>
     <div id="contact" class="contact">
         <div class="header">
