--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <a href="https://www.linkedin.com/in/jorgeacoria/" target="_blank" class="contact-details">LinkedIn</a>
         <a id="profile-link" href="https://github.com/jorge-coria" target="_blank" class="contact-details">Github</a>
         <a href="mailto:jorgecoria094@gmail.com" class="contact-details">Send e-mail</a>
-        <a href="tel:323-489-4535" class="contact-details">Text me</a>
+        <a href="sms:323-489-4535" class="contact-details">Text me</a>
     </div>
     <footer>Coria Web Solutions, 2019
     </footer>
