Missed .png on an image

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </a>
         
         <a href="gallery_page.png" target="_blank" class="project project-tile">
-                <img class="project-pic" src="gallery_page" alt="project">
+                <img class="project-pic" src="gallery_page.png" alt="project">
                 <div class="project-title">General Contractor - Client Page 2</div>
             </a>
         
