--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="project-title">General Contractor - Client Page 3</div>
             </a>
 
-        <a href="https://youtu.be/OWbJL_G4F_M" target="_blank" class="show-all">Recent Video Demonstration</a>
+        <a href="https://youtu.be/OWbJL_G4F_M" target="_blank" class="show-all">Video Demonstration</a>
     </div>
     <div id="contact" class="contact">
         <div class="header">
