--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     </nav>
 
     <div id="welcome-section" class="intro">
-        <h1>Hi, I'm Jorge Coria.</h1>
-        <p>A web developer active in the Inland Empire.</p>
+        <h1>Hi, my name is Jorge Coria.</h1>
+        <p>I'm a software engineer active in the Inland Empire.</p>
     </div>
 
     <div id="projects" class="work">
-        <h2 class="work-header">Check out my work:</h2>
+        <h2 class="work-header">Some of my work:</h2>
         <a href="eddie bravo tribute_crop.png" target="_blank" class="project project-tile">
                 <img class="project-pic" src="eddie bravo tribute_crop.png" alt="project">
                 <div class="project-title">Tribute Page</div>
@@ -75,9 +75,8 @@
         <a href="https://www.linkedin.com/in/jorgeacoria/" target="_blank" class="contact-details">LinkedIn</a>
         <a id="profile-link" href="https://github.com/jorge-coria" target="_blank" class="contact-details">Github</a>
         <a href="mailto:jorgecoria094@gmail.com" class="contact-details">Send e-mail</a>
-        <a href="sms:323-489-4535" class="contact-details">Text me</a>
     </div>
-    <footer>Coria Web Solutions, 2020
+    <footer>Coria Web Solutions, 2022
     </footer>
 </body>
 
